2000-02-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	* fvwm/fvwm.h:
	* fvwm/borders.c:
	* fvwm/builtins.c:
	* fvwm/style.c (ProcessNewStyle):
	* fvwm/style.h:
	fixed type: stiple -> stipple

2000-02-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/misc.c (fvwm_msg):
	fixed core dump

	* fvwm/functions.c (execute_complex_function):
	fixed memory leak

2000-02-11  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm.c (main): use HOSTDISPLAY postfix in restart state file
	* fvwm/fvwm2.1: fixed -restore entry

2000-02-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.c (main):
	fixed startup core dump

2000-02-10  Mikhael Goikhman  <migo@homemail.com>

	From a patch by Mark Rainford.
	* fvwm/functions.c (expand): fixed $v
	* fvwm/misc.c (fvwm_msg): indicate screen number if >1

2000-02-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (SmartPlacement):
	fixed hang introduced with previous placement patch

	* fvwm/style.c (remove_all_of_style_from_list):
	fixed core dump

2000-02-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	finished man page rewrite
	ispell session

	* fvwm/windowlist.c (do_windowList):
	implemented SelectOnRelease option for window list

2000-02-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (NewMenuStyle):
	(paint_item):
	* fvwm/menus.h (MenuLook):
	implemented reversed menu selection
	fixed bug in item drawing introduced with ActiveColorset patch

	* fvwm/menus.c (find_entry):
	fixed function with thick reliefs

	* fvwm/placement.c (PlaceWindow):
	(PlaceAgain_func):
	* fvwm/placement.h:
	* fvwm/add_window.c (setup_window_placement):
	made PlaceAgain work as documented in the man page
	fixed bug causing windows to be placed off screen

	* fvwm/menus.c (paint_item):
	(NewMenuStyle):
	ActiveColorset doesn't force a hilit background anymore

	* fvwm/borders.c:
	* fvwm/builtins.c:
	* fvwm/screen.h (ScreenInfo):
	renamed global cur_decor to Scr.cur_decor

	* fvwm/functions.h:
	* fvwm/functions.c: