@@ -1,3 +1,8 @@
+2000-02-14  Hippo
+
+	* fvwm/add_window.{c,h}: Simplified window creation calls,
+	BackingStore controllable on client and decoration.
+
 2000-02-14  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/fvwm2.1:
